--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,30 @@ code {
   overflow: hidden;
 }
 
+.resizable:focus { 
+  outline: none !important;
+  border-color: #719ECE;
+  box-shadow: 0 0 10px #719ECE;
+}
+
 .box {
   padding: 10px;
   text-align: center;
   font-size: 16px;
-  font-weight: bold;
+  /* font-weight: bold; */
   /* position: absolute; */
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.box:hover { 
+  outline: none !important;
+  border-color: #719ECE;
+  box-shadow: 0 5px 10px #11973a;
+  background-color: #999;
 }
 
